problema front 6